2025 02 12 add new apis, debug bugs
